<resources>
    <string name="app_name" translatable="false">USTH Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="mon" translatable="true">Monday</string>
    <string name="tue" translatable="true">Tuesday</string>
    <string name="wed" translatable="true">Wednesday</string>
    <string name="thu" translatable="true">Thursday</string>
    <string name="fri" translatable="true">Friday</string>
    <string name="sat" translatable="true">Saturday</string>
    <string name="sun" translatable="true">Sunday</string>
</resources>