<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weather_and_forecast"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".WeatherAndForecastFragment">

    <!-- Weather Fragment -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:background="@drawable/new_frame"
        android:padding="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:padding="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="12C \nCloudy"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_margin="20dp">
            </TextView>

            <ImageView
                android:src="@drawable/cloud"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="Paris"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_margin="20dp">
            </TextView>

        </RelativeLayout>
    </LinearLayout>


    <!-- Forecast Fragment -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFD4EBF2"
        android:orientation="vertical">

        <!-- Monday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:text="@string/mon"
                android:gravity="center"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black"
                android:textSize="18sp">
            </TextView>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:src="@drawable/weather_icon_2">
            </ImageView>

            <TextView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:text="30C - 33C"
                android:textColor="@color/black"
                android:textSize="18sp">
            </TextView>
        </LinearLayout>

        <!-- Tuesday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:text="@string/tue"
                android:gravity="center"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black"
                android:textSize="18sp">
            </TextView>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:src="@drawable/rain">
            </ImageView>

            <TextView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:text="24C - 27C"
                android:textColor="@color/black"
                android:textSize="18sp">
            </TextView>
        </LinearLayout>

        <!-- Wednesday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:text="@string/wed"
                android:gravity="center"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black"
                android:textSize="18sp">
            </TextView>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:src="@drawable/thunderstorm">
            </ImageView>

            <TextView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:text="21C - 25C"
                android:textColor="@color/black"
                android:textSize="18sp">
            </TextView>
        </LinearLayout>

        <!-- Thursday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:text="@string/thu"
                android:gravity="center"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black"
                android:textSize="18sp">
            </TextView>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:src="@drawable/thunderstorm">
            </ImageView>

            <TextView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:text="20C - 22C"
                android:textColor="@color/black"
                android:textSize="18sp">
            </TextView>
        </LinearLayout>

        <!-- Friday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:text="@string/fri"
                android:gravity="center"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black"
                android:textSize="18sp">
            </TextView>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:src="@drawable/snow">
            </ImageView>

            <TextView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:text="5C - 7C"
                android:textColor="@color/black"
                android:textSize="18sp">
            </TextView>
        </LinearLayout>

        <!-- Saturday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:text="@string/sat"
                android:gravity="center"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black"
                android:textSize="18sp">
            </TextView>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:src="@drawable/wind">
            </ImageView>

            <TextView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:text="14C - 18C"
                android:textColor="@color/black"
                android:textSize="18sp">
            </TextView>
        </LinearLayout>

        <!-- Sunday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:text="@string/sun"
                android:gravity="center"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black"
                android:textSize="18sp">
            </TextView>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:src="@drawable/cloud">
            </ImageView>

            <TextView
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:text="20C - 23C"
                android:textColor="@color/black"
                android:textSize="18sp">
            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>